--- a/composer.json
+++ b/composer.json
@@ -161,6 +161,7 @@
         "ext-xmlwriter": "*",
         "bamarni/composer-bin-plugin": "~1.4.1",
         "brianium/paratest": "^6.2",
+        "dg/bypass-finals": "^1.3",
         "dms/phpunit-arraysubset-asserts": "^0.2.1",
         "fakerphp/faker": "~1.14.1",
         "johnkary/phpunit-speedtrap": "~4.0.0",
