--- a/.gitlab/templates/plugin.yml
+++ b/.gitlab/templates/plugin.yml
@@ -224,7 +224,9 @@ phpunit:
         when: always
         reports:
             junit: phpunit.junit.xml
-            cobertura: cobertura.xml
+            coverage_report:
+                coverage_format: cobertura
+                path: cobertura.xml
 
 phpstan:
     stage: test
