--- a/.gitlab/lib/rules.yml
+++ b/.gitlab/lib/rules.yml
@@ -4,6 +4,7 @@
         if: '$CI_MERGE_REQUEST_LABELS =~ /.*lint::skip.*/ && $CI_JOB_STAGE == "lint"
           || $CI_MERGE_REQUEST_LABELS =~ /.*unit::skip.*/ && $CI_JOB_STAGE == "unit"
           || $CI_MERGE_REQUEST_LABELS =~ /.*E2E::skip.*/ && $CI_JOB_STAGE == "E2E"
+          || $CI_MERGE_REQUEST_LABELS =~ /.*quarantine::skip.*/ && $CI_JOB_STAGE == "quarantine"
           || $CI_MERGE_REQUEST_LABELS =~ /.*security::skip.*/ && $CI_JOB_STAGE == "security"
           || $CI_MERGE_REQUEST_LABELS =~ /.*build::skip.*/ && $CI_JOB_STAGE == "build"
           || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::skip.*/ && $CI_JOB_STAGE == "deploy"
@@ -14,6 +15,7 @@
         if: '$CI_MERGE_REQUEST_LABELS =~ /.*lint::all.*/ && $CI_JOB_STAGE == "lint"
           || $CI_MERGE_REQUEST_LABELS =~ /.*unit::all.*/ && $CI_JOB_STAGE == "unit"
           || $CI_MERGE_REQUEST_LABELS =~ /.*E2E::all.*/ && $CI_JOB_STAGE == "E2E"
+          || $CI_MERGE_REQUEST_LABELS =~ /.*quarantine::all.*/ && $CI_JOB_STAGE == "quarantine"
           || $CI_MERGE_REQUEST_LABELS =~ /.*security::all.*/ && $CI_JOB_STAGE == "security"
           || $CI_MERGE_REQUEST_LABELS =~ /.*build::all.*/ && $CI_JOB_STAGE == "build"
           || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::all.*/ && $CI_JOB_STAGE == "deploy"
@@ -24,6 +26,7 @@
                  $CI_MERGE_REQUEST_LABELS =~ /.*lint::all.*/ && $CI_JOB_STAGE == "lint"
               || $CI_MERGE_REQUEST_LABELS =~ /.*unit::all.*/ && $CI_JOB_STAGE == "unit"
               || $CI_MERGE_REQUEST_LABELS =~ /.*E2E::all.*/ && $CI_JOB_STAGE == "E2E"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*quarantine::all.*/ && $CI_JOB_STAGE == "quarantine"
               || $CI_MERGE_REQUEST_LABELS =~ /.*security::all.*/ && $CI_JOB_STAGE == "security"
               || $CI_MERGE_REQUEST_LABELS =~ /.*build::all.*/ && $CI_JOB_STAGE == "build"
               || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::all.*/ && $CI_JOB_STAGE == "deploy"
