NEXT-17398 - Implement php bench and a new fixture loader

--- a/composer.json
+++ b/composer.json
@@ -170,6 +170,7 @@
         "mbezhanov/faker-provider-collection": "~2.0.1",
         "nikic/php-parser": "~4.13.2",
         "opis/json-schema": "~1.0.19",
+        "phpbench/phpbench": "^1.2",
         "phpdocumentor/reflection-docblock": "^5.3.0",
         "phpstan/extension-installer": "^1.1.0",
         "phpstan/phpstan": "1.8.0",
@@ -335,7 +336,7 @@
             "@setup",
             "@e2e:prepare"
         ],
-
+        "phpbench": "phpbench run --ref=main --report=compressed",
         "e2e:prepare": [
             "@putenv APP_ENV=e2e",
             "@putenv CYPRESS_localUsage=1",
@@ -424,11 +425,11 @@
     },
     "autoload-dev": {
         "psr-4": {
-             "Shopware\\Storefront\\Test\\": "src/Storefront/Test/",
-             "Shopware\\Administration\\Test\\": "src/Administration/Test",
-             "Shopware\\Elasticsearch\\Test\\": "src/Elasticsearch/Test",
-             "Shopware\\Recovery\\Test\\": "src/Recovery/Test",
-             "Shopware\\Docs\\Test\\": "src/Docs/Test",
+            "Shopware\\Storefront\\Test\\": "src/Storefront/Test/",
+            "Shopware\\Administration\\Test\\": "src/Administration/Test",
+            "Shopware\\Elasticsearch\\Test\\": "src/Elasticsearch/Test",
+            "Shopware\\Recovery\\Test\\": "src/Recovery/Test",
+            "Shopware\\Docs\\Test\\": "src/Docs/Test",
              "Shopware\\Core\\Content\\Test\\": "src/Core/Content/Test/",
              "Shopware\\Core\\Framework\\Test\\": "src/Core/Framework/Test/",
              "Shopware\\Core\\Migration\\Test\\": "src/Core/Migration/Test/",
