NEXT-22228 - Fix admin stylelint

--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -72,6 +72,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "optional-chaining-codemod": "1.7.0",
+    "postcss": "^8.4.14",
     "puppeteer": "13.7.0",
     "stylelint-junit-formatter": "0.2.2",
     "terser-webpack-plugin": "4.2.3",
