NEXT-17399 - Added test for cash rounding. Added reference integration test for ordering a simple product

--- a/.gitlab/stages/20-unit.yml
+++ b/.gitlab/stages/20-unit.yml
@@ -106,7 +106,7 @@ PHP coverage:
     parallel:
         matrix:
             - TESTSUITE: ["framework", "storefront,administration,system,profiling,maintenance,docs", "migration"]
-            - TESTSUITE: ["content", "checkout", "elasticsearch"]
+            - TESTSUITE: ["content", "checkout", "elasticsearch", "unit", "integration"]
               RUNNER_INSTANCE_TYPE: m5.large
 
 PHP Full:
@@ -126,7 +126,7 @@ PHP Full:
         -   name: redis
             alias: redis
     variables:
-        TEST_SUITES: "docs administration storefront checkout content framework profiling system elasticsearch migration"
+        TEST_SUITES: "docs administration storefront checkout content framework profiling system elasticsearch unit integration migration"
         APP_ENV: test
         GIT_DEPTH: 0 # we need all commits for composer to detect the version which is then checked in a unit test
         RUNNER_INSTANCE_TYPE: m5.large
@@ -170,12 +170,12 @@ PHP Full:
                 DEV_IMAGE: shopware/development:7.4-composer-2
                 FEATURE_ALL: 'false'
                 ONLY_CORE: 'true'
-                TEST_SUITES: "checkout content framework profiling system migration"
+                TEST_SUITES: "checkout content framework profiling system integration migration"
             -   MYSQL_IMAGE: mariadb:10.5
                 DEV_IMAGE: shopware/development:7.4-composer-2
                 FEATURE_ALL: 'false'
                 DEPENDENCY_DEV: 'true'
-                TEST_SUITES: "checkout content framework profiling system migration"
+                TEST_SUITES: "checkout content framework profiling system integation migration"
                 ALLOW_FAILURE: 'true'
     script:
         - >
