--- a/.gitlab/stages/20-unit.yml
+++ b/.gitlab/stages/20-unit.yml
@@ -53,7 +53,7 @@ Jest (Storefront):
                 coverage_format: cobertura
                 path: build/artifacts/jest/cobertura-coverage.xml
 
-PHP coverage:
+PHP unit:
     extends: .base-no-setup
     image: shopware/development:7.4-composer-2
     stage: unit
@@ -84,30 +84,61 @@ PHP coverage:
         - composer install --optimize-autoloader --no-interaction
         - mkdir -p config/jwt || true
     script:
-        - PHP_OPTIONS="-d pcov.enabled=1 -d pcov.directory=$PWD/src -d pcov.exclude='~(vendor|Test|node_modules)~'"
-        - php $PHP_OPTIONS vendor/bin/phpunit
+        - php vendor/bin/phpunit
             --configuration phpunit.xml.dist
             --log-junit phpunit.junit.xml
             --exclude-group=needsWebserver,skip-paratest,not-deterministic,quarantined
             --testsuite "$TESTSUITE"
             --order-by default
+    coverage: '/^\s*Lines:\s*(\d+(?:\.\d+)?%)/'
+    artifacts:
+        when: always
+        reports:
+            junit: phpunit.junit.xml
+    parallel:
+        matrix:
+            - TESTSUITE: ["framework", "storefront,administration,system,profiling,maintenance,docs", "migration"]
+            - TESTSUITE: ["content", "checkout", "elasticsearch", "integration"]
+              RUNNER_INSTANCE_TYPE: m5.large
+
+PHP unit coverage:
+    extends: .base-no-setup
+    image: shopware/development:7.4-composer-2
+    stage: unit
+    needs: []
+    timeout: 10m
+    services: []
+    variables:
+        APP_ENV: "test"
+        FEATURE_ALL: "false"
+    rules:
+        # do not run in merge trains - PHP Full should cover all tests
+        - if: $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train"
+          when: never
+        - !reference [.rules, skip]
+        - !reference [.rules, run]
+        - when: always
+    before_script:
+        - composer install --optimize-autoloader --no-interaction --quiet
+    script:
+        - PHP_OPTIONS="-d pcov.enabled=1 -d pcov.directory=$PWD/src -d pcov.exclude='~(vendor|Test|node_modules)~'"
+        - php $PHP_OPTIONS vendor/bin/phpunit
+            --configuration phpunit.xml.dist
+            --bootstrap vendor/autoload.php
+            --log-junit phpunit.junit.xml
+            --testsuite unit
             --coverage-text
             --coverage-cobertura cobertura.xml | sed -E -n '1,/^\s*Lines:\s*([0-9]+(\.[0-9]+)?)%/ p' # do not output covered files lines
     coverage: '/^\s*Lines:\s*(\d+(?:\.\d+)?%)/'
     artifacts:
-        when: always
-        paths:
-            - cobertura.xml
-        reports:
-            junit: phpunit.junit.xml
-            coverage_report:
-                coverage_format: cobertura
-                path: cobertura.xml
-    parallel:
-        matrix:
-            - TESTSUITE: ["framework", "storefront,administration,system,profiling,maintenance,docs", "migration"]
-            - TESTSUITE: ["content", "checkout", "elasticsearch", "unit", "integration"]
-              RUNNER_INSTANCE_TYPE: m5.large
+      when: always
+      paths:
+        - cobertura.xml
+      reports:
+        junit: phpunit.junit.xml
+        coverage_report:
+          coverage_format: cobertura
+          path: cobertura.xml
 
 PHP Full:
     extends: .long-running
