--- a/.gitlab/lib/rules.yml
+++ b/.gitlab/lib/rules.yml
@@ -5,7 +5,7 @@
           || $CI_MERGE_REQUEST_LABELS =~ /.*unit::skip.*/ && $CI_JOB_STAGE == "unit"
           || $CI_MERGE_REQUEST_LABELS =~ /.*E2E::skip.*/ && $CI_JOB_STAGE == "E2E"
           || $CI_MERGE_REQUEST_LABELS =~ /.*quarantine::skip.*/ && $CI_JOB_STAGE == "quarantine"
-          || $CI_MERGE_REQUEST_LABELS =~ /.*security::skip.*/ && $CI_JOB_STAGE == "security"
+          || $CI_MERGE_REQUEST_LABELS =~ /.*downstream::skip.*/ && $CI_JOB_STAGE == "downstream"
           || $CI_MERGE_REQUEST_LABELS =~ /.*build::skip.*/ && $CI_JOB_STAGE == "build"
           || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::skip.*/ && $CI_JOB_STAGE == "deploy"
           || $CI_MERGE_REQUEST_LABELS =~ /.*visual::skip.*/ && $CI_JOB_STAGE == "visual"
@@ -17,7 +17,7 @@
           || $CI_MERGE_REQUEST_LABELS =~ /.*unit::all.*/ && $CI_JOB_STAGE == "unit"
           || $CI_MERGE_REQUEST_LABELS =~ /.*E2E::all.*/ && $CI_JOB_STAGE == "E2E"
           || $CI_MERGE_REQUEST_LABELS =~ /.*quarantine::all.*/ && $CI_JOB_STAGE == "quarantine"
-          || $CI_MERGE_REQUEST_LABELS =~ /.*security::all.*/ && $CI_JOB_STAGE == "security"
+          || $CI_MERGE_REQUEST_LABELS =~ /.*downstream::all.*/ && $CI_JOB_STAGE == "downstream"
           || $CI_MERGE_REQUEST_LABELS =~ /.*build::all.*/ && $CI_JOB_STAGE == "build"
           || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::all.*/ && $CI_JOB_STAGE == "deploy"
           || $CI_MERGE_REQUEST_LABELS =~ /.*visual::all.*/ && $CI_JOB_STAGE == "visual"'
@@ -28,7 +28,7 @@
               || $CI_MERGE_REQUEST_LABELS =~ /.*unit::all.*/ && $CI_JOB_STAGE == "unit"
               || $CI_MERGE_REQUEST_LABELS =~ /.*E2E::all.*/ && $CI_JOB_STAGE == "E2E"
               || $CI_MERGE_REQUEST_LABELS =~ /.*quarantine::all.*/ && $CI_JOB_STAGE == "quarantine"
-              || $CI_MERGE_REQUEST_LABELS =~ /.*security::all.*/ && $CI_JOB_STAGE == "security"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*downstream::all.*/ && $CI_JOB_STAGE == "downstream"
               || $CI_MERGE_REQUEST_LABELS =~ /.*build::all.*/ && $CI_JOB_STAGE == "build"
               || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::all.*/ && $CI_JOB_STAGE == "deploy"
               || $CI_MERGE_REQUEST_LABELS =~ /.*visual::all.*/ && $CI_JOB_STAGE == "visual")'
