--- a/.gitlab/stages/21-security.yml
+++ b/.gitlab/stages/21-security.yml
@@ -2,7 +2,7 @@
 
 Symfony security check:
     extends: .long-running
-    stage: security
+    stage: unit
     needs: []
     image: shopware/development:7.4-composer-2
     before_script: []
