--- a/composer.json
+++ b/composer.json
@@ -438,5 +438,6 @@
              "Shopware\\Core\\Profiling\\Test\\": "src/Core/Profiling/Test/",
              "Shopware\\Core\\Test\\": "src/Core/Test/"
         }
-    }
+    },
+    "version": "6.4.14.0"
 }
