--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -121,11 +121,11 @@
         </testsuite>
 
         <testsuite name="unit">
-            <directory>tests/unit</directory>
+            <directory>tests/unit/php</directory>
         </testsuite>
 
         <testsuite name="integration">
-            <directory>tests/integration</directory>
+            <directory>tests/integration/php</directory>
         </testsuite>
 
         <testsuite name="docs">
@@ -140,6 +140,7 @@
             <directory>src/Core/*/Test</directory>
             <directory>src/*/Test</directory>
             <directory>custom/plugins/SwagCommercial</directory>
+            <directory>tests/unit/php</directory>
             <exclude>src/Recovery/Test</exclude>
             <exclude>src/Storefront/Test/Migration</exclude>
             <exclude>src/Core/Migration/Test</exclude>
