NEXT-22548 - Skip quarantined tests in github actions pipeline

--- a/composer.json
+++ b/composer.json
@@ -304,7 +304,7 @@
         "lint": [
             "@stylelint",
             "@eslint",
-            "@ecs src/",
+            "@ecs",
             "@lint:changelog",
             "@lint:snippets"
         ],
