--- a/.github/workflows/01-php-lint.yml
+++ b/.github/workflows/01-php-lint.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Check Code
       run: |
-        composer run ecs -- src --no-progress-bar
+        composer run ecs -- --no-progress-bar
         composer run phpstan -- --error-format=gitlab --no-progress | tee phpstan-report.json
         composer run lint:changelog
         composer run lint:snippets
