--- a/.gitlab/lib/scripts.yml
+++ b/.gitlab/lib/scripts.yml
@@ -2,19 +2,9 @@
   # install node $NODE_VERSION
   install-node:
       script:
-        - apk add curl bash wget coreutils || true
-        - apt-update && apt-get install -y curl bash || true
-        - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
-        - export NVM_DIR="$HOME/.nvm"
-        - '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"'
-        - export NODE_VERSION="${NODE_VERSION:-16}"
-        - nvm install $NODE_VERSION
-        - rm /usr/bin/npm
-        - rm /usr/bin/node
-        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/node /usr/bin/node
-        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/npm /usr/bin/npm
-        - npm config set --global user 0
-        - npm config set --global unsafe-perm true
+        - curl https://get.volta.sh | bash
+        - export PATH="~/.volta/bin:$PATH"
+        - volta install "node@$NODE_VERSION"
   handle-failed-merge-train:
       after_script:
         - >
