--- a/.gitlab/stages/20-unit.yml
+++ b/.gitlab/stages/20-unit.yml
@@ -6,15 +6,17 @@ Jest (Administration):
     extends: .base
     stage: unit
     needs: []
-    services:
-        -   name: mariadb:10.3
-            alias: database
+    services: []
     rules:
         - !reference [ .rules, skip ]
         - !reference [ .rules, run ]
         - when: always
+    before_script:
+      - composer install --no-scripts --no-plugins --quiet
+      - bin/console framework:schema -s 'entity-schema' $ADMIN_PATH/test/_mocks_/entity-schema.json 2>/dev/null
+      - !reference [ .scripts, install-node, script ]
+      - (cd $ADMIN_PATH && npm ci)
     script:
-        - bin/console framework:schema -s 'entity-schema' $ADMIN_PATH/test/_mocks_/entity-schema.json
         - npm --prefix $ADMIN_PATH run unit -- --silent
     coverage: '/^\s?All files[^|]*\|[^|]*\s+([\d\.]+)/'
     artifacts:
@@ -31,16 +33,19 @@ Jest (Storefront):
     extends: .base
     stage: unit
     needs: []
-    services:
-        -   name: mariadb:10.3
-            alias: database
+    services: []
     rules:
         - !reference [.rules, skip]
         - !reference [.rules, run]
         - when: always
+    variables:
+      NODE_VERSION: 12
+    before_script:
+      - composer install --no-scripts --no-plugins --quiet
+      - bin/console framework:schema -s 'entity-schema' $ADMIN_PATH/test/_mocks_/entity-schema.json
+      - !reference [ .scripts, install-node, script ]
+      - (cd $STOREFRONT_PATH && npm ci)
     script:
-        - export NODE_VERSION=12
-        - !reference [.scripts, install-node, script]
         - npm --prefix "$STOREFRONT_PATH" run unit -- --silent
     coverage: '/^\s?All files[^|]*\|[^|]*\s+([\d\.]+)/'
     artifacts:
